--- a/templates/week1.html
+++ b/templates/week1.html
@@ -5,11 +5,11 @@
 	<div class="row">
 			<div class="block block--full">
 				<h2>Week 1</h2>
-				<h1>You arrive in Cape Town</h1>
+				<h1>Welcome to the Mother City</h1>
 				<div class="block__contents">
-					<p>Class begins, you explore the city, and you make sixteen new friends. It is the beginning of an epic summer (winter).</p>
-					<p>With the pre-work under your belt (or maybe not quite finished), a huge amount of work was thrown right at your face on day 1. Maybe you hated Rafi and Allie - replicating websites is tough. Let's hope that you never, ever have to look at <em>Delicio</em> again. By day two and three, your prospects looked a bit better. HTML is just boxes inside boxes? There are multiple ways to align divs on a line? No way.</p>
-					<p>By the end of week 1, everyone had a personal website on the real internet. You probably struggled a bit, still wish that one div has a bit less padding, and want to perfect your website. But think about it - just one week before your website had a huge picture, little styling, and a welcoming "Hello World". In just 5 days, you came a long way. And hopefully you ended up liking Allie and Rafi after all.</p>
+					<p>Class begins, you explore the city, and you make 25 new friends. It is the beginning of an epic summer (winter).</p>
+					<p>You all crushed the pre-work (mostly) and then immediately drowned in StudioNudge and other fun website duplications. You discovered that Gabe is only 22 and that his facial hair adds on a few years. Everyone got an alliterative adjective and the best four weeks of your life began.</p>
+					<p>By the end of week 1, everyone had a personal website on the real live internet. You probably struggled a bit, still wish that one div has a bit less padding, and want to perfect your website. But think about it - just one week before your website had an awkwardly large picture, a horrible background color, and a nice "Hello World". By the end, you had amazing CSS styling and incredibly beautiful sites.</p>
 				</div>
 				<p></p>
 			</div>
@@ -31,6 +31,25 @@
 				</a>
 			</div>
 			<div class="col-md-4">
+				<a href="http://gabeboning.com">
+					<div class="student">
+						<img class="student-pic"  src="./images/gabe.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Gabe Boning</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="">
+					<div class="student">
+						<img class="student-pic"  src="./images/ben.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Ben Penchas</h3>
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
 				<a href="">
 					<div class="student">
 						<img class="student-pic"  src="./images/rafi.jpg" alt="">
@@ -39,134 +58,115 @@
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://kcha16.github.io/">
+				<a href="http://adimitui.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/kevin.jpeg" alt="">
+						<img class="student-pic" src="./images/adelle.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Kevin Cha</h3>
-				</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-4">
-				<a href="http://ejelliott.github.io">
-					<div class="student">
-						<img class="student-pic"  src="./images/ej.jpg" alt="">
-					</div>
-					<h3 class="caption person-caption">EJ Elliot</h3>
+					<h3 class="caption person-caption">Adelle Dimitui</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://sahil505.github.io">
+				<a href="http://alexmb1212.github.io/">
 					<div class="student">
-						<img class="student-pic" src="./images/sahil.jpg" alt="">
+						<img class="student-pic"  src="./images/alex.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Sahil Khokar</h3>
+					<h3 class="caption person-caption">Alex Moss-Bolanos</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://stephkwok01.github.io">
+				<a href="http://amirxadem.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/steph.jpg" alt="">
+						<img class="student-pic"  src="./images/amir.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Steph Kwok</h3>
+					<h3 class="caption person-caption">Amir Adem</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://samanthamashaal.github.io">
+				<a href="http://andrewkwik.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/smash.jpg" alt="">
+						<img class="student-pic"  src="./images/andrew.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Smash Mashaal</h3>
+					<h3 class="caption person-caption">Andrew Kwik</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://christinjh.github.io">
+				<a href="http://chayles.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/christine.jpg" alt="">
+						<img class="student-pic"  src="./images/caitlin.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Christine Hong</h3>
+					<h3 class="caption person-caption">Caitlin Hayles</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://kellymcguffog.github.io">
+				<a href="http://cgjohn.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/kelly.jpg" alt="">
+						<img class="student-pic"  src="./images/connor.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Kelly McGuffog</h3>
+					<h3 class="caption person-caption">Connor Johnston</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://jcmiller017.github.io">
+				<a href="http://courtneyrae23.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/jojo.jpg" alt="">
+						<img class="student-pic"  src="./images/courtney.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">JoJo Miller</h3>
+					<h3 class="caption person-caption">Courtney Pasco</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://chrismoxley.github.io">
+				<a href="http://dsnathan.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/chris.jpg" alt="">
+						<img class="student-pic"  src="./images/dan.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Chris Moxley</h3>
+					<h3 class="caption person-caption">Dan Nathan</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://14perkinss.github.io">
+				<a href="http://emmafass.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/sam.jpg" alt="">
+						<img class="student-pic"  src="./images/emma.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Sam Perkins</h3>
+					<h3 class="caption person-caption">Emma Fass</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://rachelrub.github.io">
+				<a href="http://ibenatar.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/rachel.jpg" alt="">
+						<img class="student-pic"  src="./images/isabel.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Rachel Rub</h3>
+					<h3 class="caption person-caption">Isabel Benatar</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://stellapickard.github.io">
+				<a href="http://jessnyquist.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/stella.jpg" alt="">
+						<img class="student-pic"  src="./images/jessica.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Stella Truter</h3>
+					<h3 class="caption person-caption">Jessica Nyquist</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://lyreguin.github.io">
+				<a href="http://jodieryu.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/michael.jpg" alt="">
+						<img class="student-pic"  src="./images/jodie.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Michael Venter</h3>
+					<h3 class="caption person-caption">Jodie Ryu</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://francivanrhyn.github.io">
+				<a href="http://joshlauder.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/franci.jpg" alt="">
+						<img class="student-pic"  src="./images/josh.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Franci van Rhyn</h3>
+					<h3 class="caption person-caption">Josh Lauder</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="http://allyrogge.github.io">
+				<a href="http://lorna-k.github.io">
 					<div class="student">
-						<img class="student-pic"  src="./images/allison.jpg" alt="">
+						<img class="student-pic"  src="./images/lorna.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Allison Rogge</h3>
-				</a>
-			</div>
-			<div class="col-md-4">
-				<a href="http://pspecora.github.io">
-					<div class="student">
-						<img class="student-pic"  src="./images/pietro.jpg" alt="">
-					</div>
-					<h3 class="caption person-caption">Pietro Pecora</h3>
+					<h3 class="caption person-caption">Lorna Nqodi</h3>
 				</a>
 			</div>
 		</div>
@@ -174,18 +174,100 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<a href="http://nbl5.github.io">
+				<a href="http://masonbor.github.io">
 					<div class="student">
-						<img class="student-pic" src="./images/nikki.jpg" alt="">
+						<img class="student-pic" src="./images/mason.jpg" alt="">
 					</div>
-					<h3 class="caption person-caption">Nikki Levy</h3>
+					<h3 class="caption person-caption">Mason Borden</h3>
 				</a>
 			</div>
 			<div class="col-md-4">
-				
+				<a href="http://trynalearn.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/nadim.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Nadim Rifai</h3>
+				</a>
 			</div>
 			<div class="col-md-4">
-				
+				<a href="http://pablocodes.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/pablo.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Pablo Cazzulino</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://rachelad6.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/rachel.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Rachel Davis</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://raul-f-rodriguez.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/raul.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Raul Rodriguez</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://robertcas257.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/rob.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Rob Castellanos</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://bulele.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/sibulele.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Sibulele Hlongwane</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://mkhskh003.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/skhumbuzo.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Skhumbuzo Mkhungo</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://stephshin2.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/steph.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Steph Shin</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://veraxrl.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/vera.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Vera Xu</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://wandersonbanks.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/wandile.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Wandile Khowa</h3>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://wstager.github.io">
+					<div class="student">
+						<img class="student-pic" src="./images/will.jpg" alt="">
+					</div>
+					<h3 class="caption person-caption">Will Stager</h3>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -256,11 +338,3 @@
 	
 	
 </div>
-
-<!-- final projects -->
-
-<!-- more resources -->
-
-<!-- memory pics -->
-
-<!-- message from teachers -->
