--- a/templates/week2.html
+++ b/templates/week2.html
@@ -4,9 +4,9 @@
 				<h2>Week 2</h2>
 				<h1>In Comes Javascript</h1>
 				<div class="block__contents">
-					<p>After a game drive at sunset and another at sunrise, week 2 began. Javascript tests, JavaScript functions, form validations, and DOM manipulation consumed your time. There was confusion - when do I keypress versus keyup? </p>
-					<p>And what is this $ we throw around with jQuery? Is it just some magic? You conquered the New York Times API and figured out some AJAX too. Some crazy things could happen. Colors could change, text could appear, and things could fly across the screen (almost). Your coding skills got pretty powerful.</p>
-					<p>To tie it all together, you created <em>Instamood</em>. Who knew an ego score could really be 100%? Nikki sure did! Using the Instagram API and a Sentiment Analysis API, you revamped Instagram. Now we know that everyone really does need a positivity score on their captions and that APIs are creepily good at analyzing the contents of images.</p>
+					<p>After a great day surfing in Muizenberg, week 2 began. Javascript tests, JavaScript functions, and all things code consumed your time. There was confusion, and hopefully some points of clarity too.</p>
+					<p>And what is this AngularJS thing? Is it just some magic? Colors could change, text could appear, and there was a lot of "ng". Your coding skills got pretty powerful.</p>
+					<p>To tie it all together, you created <em>Instamood</em>. Using the Instagram API and a Sentiment Analysis API, you revamped Instagram. Now we know that everyone really does need a positivity score on their captions and that APIs are creepily good at analyzing the contents of images.</p>
 				</div>
 				<p></p>
 			</div>
@@ -14,22 +14,22 @@
 	
 	<div class="row photos">
 		<div class="photo photo-1">
-			<img src="images/safari.jpg">
+			<img src="images/brunch.jpg">
 		</div>
 		<div class="photo photo-2">
-			<img src="images/peacock.jpg">
+			<img src="images/steph-lionshead.jpg">
 		</div>
 		<div class="photo photo-3">
-			<img src="images/lion.jpg">
+			<img src="images/canopywalk.jpg">
 		</div>
 		<div class="photo photo-4">
-			<img src="images/safari3.jpg">
+			<img src="images/sunset.jpg">
 		</div>
 		<div class="photo photo-5">
-			<img src="images/safari2.jpg">
+			<img src="images/muizenberg.jpg">
 		</div>
 		<div class="photo photo-6">
-			<img src="images/zebras.jpg">
+			<img src="images/group2.jpg">
 		</div>
 		
 		
