--- a/templates/week3.html
+++ b/templates/week3.html
@@ -4,52 +4,25 @@
 				<h2>Week 3</h2>
 				<h1>AngularJS</h1>
 				<div class="block__contents">
-					<p>Gabe and Ben arrived! This excitement easily made for the best part of our week. With Gabe's flowing locks and Ben's quiet genius, we knew the course got way better.</p>
-					<p>Week 3 wasn't all fun and games, though. AngularJS rocked your world. What is the <em>ng-view</em> thing? This seemed even more magical than jQuery did. But then <em>$scope</em> got a little challenging and routers took over. But overall, AngularJS was life-changing. It allowed us to create <em>Chommies</em> and prop our brus.</p>
-					<p>You rounded out week 3 with some wine tasting. But was it really just tasting? Rumor has it a bit more was consumed than a few elegant sips. But the pics look good, and that's all that matters right?</p>
+					<p>Over halfway done! You had a great time on safari with facepaint and lions and all the fun animals. Shoutout to Pablo and his selfie with a lion! Good thing Daycare Dan didn't enforce the no-pants rule during the freezing cold game drives.</p>
+					<p>Week 3 wasn't all fun and games, though. AngularJS continued to surprise you. There was <em>$scope</em> and <em>ng-view</em> and <em>$routeProvider</em> got a little challenging and fun console errors. But overall, AngularJS was life-changing. It allowed us to create <em>Chommies</em> and prop our brus.</p>
 				</div>
 				<p></p>
 			</div>
 		<div class="col-md-6">
 		</div>
 	</div>
-<div class="students-grid ben-gabe">
-	<div class="row">
-		<div class="col-md-2">
-			
-		</div>
-		<div class="col-md-4">
-			<a href="http://www.github.com/bpenchas">
-				<div class="student">
-					<img class="student-pic" src="./images/ben.jpg" alt="">
-				</div>
-				<h3 class="caption person-caption">Ben Penchas</h3>
-			</a>
-		</div>
-		<div class="col-md-4">
-			<a href="http://gabeboning.com">
-				<div class="student">
-					<img class="student-pic" src="./images/gabe.jpg" alt="">
-				</div>
-				<h3 class="caption person-caption">Gabe Boning</h3>
-			</a>
-		</div>
-		<div class="col-md-2">
-			
-		</div>
-	</div>
-</div>
 
 	<div class="row">
 		<div class="col-md-8">
 			<div class="week3-pic-div-big">
-				<img class="week3-pic-big" src="./images/wine.jpg" alt="">
+				<img class="week3-pic-big" src="./images/safari.jpg" alt="">
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div class="row">
 				<div class="week3-pic-div-small">
-					<img class="week3-pic-small" src="./images/kellynikki.jpg" alt="">
+					<img class="week3-pic-small" src="./images/selfie-with-lion.jpg" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -70,7 +43,7 @@
 			</div>
 			<div class="row">
 				<div class="week3-pic-div-small">
-					<img class="week3-pic-small" src="./images/night.png" alt="">
+					<img class="week3-pic-small" src="./images/campsbay.png" alt="">
 				</div>
 			</div>
 		</div>
