--- a/templates/week4.html
+++ b/templates/week4.html
@@ -1,15 +1,15 @@
 <div class="week container">
 	<div class="row">
-			<div class="block block--full">
-				<h2>Week 4</h2>
-				<h1>The End</h1>
-				<div class="block__contents">
-					<p>And then it was over...amidst everyone drying their tears because they'll miss class so much, you created your very own web application from scratch.</p>
-					<p>You had to make a lot of hard decisions. What was the problem? What was the vision? What features make up the minimum viable product? How can all of these ideas actually turn into code? By the last day of class, everyone's applications showcased their new skills.</p>
-				</div>
-				<p></p>
+		<div class="block block--full">
+			<h2>Week 4</h2>
+			<h1>The End</h1>
+			<div class="block__contents">
+				<p>And then it was over...amidst everyone drying their tears because they'll miss class so much, you created your very own web application from scratch. But first there was <em>Tension</em>. Messaging and channels and all communicating with one database seemed impossible. But you did it! And that propelled you into a great position to create incredible final applications. Seriously - we were beyond impressed.</p>
+				<p>You had to make a lot of hard decisions. What was the problem? What was the vision? What features make up the minimum viable product? How can all of these ideas actually turn into code? By the last day of class, everyone's applications showcased their new skills.</p>
 			</div>
-			
+			<p></p>
+		</div>
+
 		<div class="col-md-6">
 			
 		</div>
@@ -19,36 +19,36 @@
 	<div class="students-grid projects-grid">
 		<div class="row">
 			<div class="col-md-4">
-				<a href="https://github.com/allyrogge/finalprojec	t">
+				<a href="https://github.com/MKHSKH003/CityMood">
 					<div class="student">
-						<img class="student-pic"  src="./images/depindable.png" alt="">
+						<img class="student-pic"  src="./images/citymood.png" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>Depindable</h3><h4>Fraci, Allison</h4>
-						<div>Use Depindable to get trustworthy travel recommendations from friends.</div>
+						<h3>CityMood</h3><h4>Wandile, Skhumbuzo</h4>
+						<div>Find out the best things to do in a new city with ease.</div>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="https://github.com/chrismoxley/Chris-Rachel-Smash-Repo">
+				<a href="https://github.com/lorna-k/Escape">
 					<div class="student">
-						<img class="student-pic"  src="./images/rafi.jpg" alt="">
+						<img class="student-pic"  src="./images/esc.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>Yoked</h3>
-						<h4>Smash, Rachel, Chris</h4>
-						<div>Adding value to communication by using technology to make communicating harder. Are you too lazy to get off your ass? Then you're gunna get YOKED!</div>
+						<h3>ESC</h3>
+						<h4>Lorna, Isabel, Josh, Dan</h4>
+						<div>Feeling lazy? Get a daily travel itinerary so you don't have to even think about it.</div>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="https://github.com/kellymcguffog/ReFresh">
+				<a href="https://github.com/veraxrl/musci_project">
 					<div class="student">
-						<img class="student-pic"  src="./images/refresh.png" alt="">
+						<img class="student-pic"  src="./images/musiq.png" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>ReFresh</h3><h4>JoJo, Nikki, Kelly</h4>
-						<div>Sick of wasting money and food because your groceries expire? Use ReFresh to track your groceries' expiration dates and get recipe recommendations to use those soon-to-expire foods!</div>
+						<h3>MusIQ</h3><h4>Vera, Alex, Pablo</h4>
+						<div>Sick of juggling multiple music platforms? Sync it all up with Musiq.</div>
 					</div>
 				</a>
 			</div>
@@ -56,36 +56,72 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<a href="https://github.com/kcha16/InstaCaption">
+				<a href="https://github.com/andrewkwik/sapfinalproject">
 					<div class="student">
-						<img class="student-pic"  src="./images/capthat.png" alt="">
+						<img class="student-pic"  src="./images/signifi.png" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>Cap That</h3><h4> Kevin, Sahil, Sam</h4>
-						<div>blah</div>
+						<h3>Signifi</h3><h4>Sibulele, Caitlin, Andrew</h4>
+						<div>Feel safer going out knowing that you and your friends can look out for each other and know when to help.</div>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="https://github.com/Lyreguin/FinalProjectMCP/">
+				<a href="https://github.com/jessnyquist/BucketList">
 					<div class="student">
-						<img class="student-pic" src="./images/joinon.png" alt="">
+						<img class="student-pic" src="./images/buckit.png" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>Join On</h3><h4> Michael, Christine, Pietro</h4>
-						<div>blah</div>
+						<h3>BuckIt</h3><h4>Rachel, Steph, Jessica</h4>
+						<div>Set your goals, be inspired by others' plans, and see your memories.</div>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="https://github.com/stephkwok01/FriendApp">
+				<a href="https://github.com/syndiyoteamix/syndiyo-Web-Dev">
 					<div class="student">
-						<img class="student-pic"  src="./images/2conn.png" alt="">
+						<img class="student-pic"  src="./images/syndiyo.png" alt="">
 					</div>
 					<div class="caption app-caption">
-						<h3>2 Degrees of Connection</h3><h4> Stella, EJ, Steph</h4>
-						<div>2 Degrees of Connection allows you to connect with your Facebook friends (and their friends) that are present in the city you’re visiting at the moment. It connects people and inspires immersion in local communities.</div>
+						<h3>Syndiyo</h3><h4>Rob, Emma, Will, Mason</h4>
+						<div>Connect your doctors to improve your medical experience.</div>
 					</div>
 				</a>
 			</div>
-</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
+				<a href="https://github.com/amirxadem/holycow">
+					<div class="student">
+						<img class="student-pic"  src="./images/holycow.png" alt="">
+					</div>
+					<div class="caption app-caption">
+						<h3>Holy Cow</h3><h4>Amir, Raul</h4>
+						<div>Track how much meat you eat to positively contribute to the environment.</div>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="https://github.com/cgjohn/Ticket_Tracker">
+					<div class="student">
+						<img class="student-pic" src="./images/tickets.png" alt="">
+					</div>
+					<div class="caption app-caption">
+						<h3>Ticket Tracker</h3><h4>Connor, Courtney, Jodie</h4>
+						<div>Track ticket prices over time so you can get the best deal.</div>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="https://github.com/adimitui/Adevo">
+					<div class="student">
+						<img class="student-pic"  src="./images/adevo.png" alt="">
+					</div>
+					<div class="caption app-caption">
+						<h3>Adevo</h3><h4>Nadim, Adelle</h4>
+						<div>Native advertisements are more sucessful. Adevo connects developers and advertisers to use native ads.</div>
+					</div>
+				</a>
+			</div>
+		</div>
