--- a/templates/week3.html
+++ b/templates/week3.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="row">
 				<div class="week3-pic-div-small">
-					<img class="week3-pic-small" src="./images/allierafi.JPG" alt="">
+					<img class="week3-pic-small" src="./images/lionshead-group.JPG" alt="">
 				</div>
 			</div>
 		</div>
@@ -37,19 +37,19 @@
 		<div class="col-md-4">
 			<div class="row">
 				<div class="week3-pic-div-small">
-					<img class="week3-pic-xs" src="./images/chommie1.png" alt="">
-					<img class="week3-pic-xs" src="./images/chommie2.png" alt="">
+					<img class="week3-pic-xs" src="./images/tension.png" alt="">
+					<img class="week3-pic-xs" src="./images/moviegif.png" alt="">
 				</div>
 			</div>
 			<div class="row">
 				<div class="week3-pic-div-small">
-					<img class="week3-pic-small" src="./images/campsbay.png" alt="">
+					<img class="week3-pic-small" src="./images/gg.jpg" alt="">
 				</div>
 			</div>
 		</div>
 		<div class="col-md-8">
 			<div class="week3-pic-div-big">
-				<img class="week3-pic-big" src="./images/group.jpg" alt="">
+				<img class="week3-pic-big" src="./images/tapas.jpg" alt="">
 			</div>
 		</div>
 	</div>
