--- a/css/main.css
+++ b/css/main.css
@@ -275,7 +275,7 @@ a {
   width: 100%;
   height: 350px;
   margin: auto;
-  padding: 15px; }
+  padding: 15px 0; }
 
 .week3-pic-small {
   width: 100%;
@@ -291,7 +291,12 @@ a {
 .week3-pic-xs {
   width: 45%;
   height: 100%;
-  object-fit: scale-down; }
+  object-fit: cover;
+  object-position: top left;
+  float: left; }
+
+.week3-pic-xs:first-child {
+  margin-right: 10%; }
 
 .ben-gabe {
   margin-bottom: 10px; }
