--- a/templates/week1.html
+++ b/templates/week1.html
@@ -50,7 +50,7 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<a href="">
+				<a href="#">
 					<div class="student">
 						<img class="student-pic"  src="./images/rafi.jpg" alt="">
 					</div>
