most group screenshots here

--- a/templates/week4.html
+++ b/templates/week4.html
@@ -44,7 +44,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/veraxrl/musci_project">
 					<div class="student">
-						<img class="student-pic"  src="./images/musiq.png" alt="">
+						<img class="student-pic"  src="./images/musiq.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>MusIQ</h3><h4>Vera, Alex, Pablo</h4>
@@ -58,7 +58,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/andrewkwik/sapfinalproject">
 					<div class="student">
-						<img class="student-pic"  src="./images/signifi.png" alt="">
+						<img class="student-pic"  src="./images/signifi.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>Signifi</h3><h4>Sibulele, Caitlin, Andrew</h4>
@@ -69,7 +69,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/jessnyquist/BucketList">
 					<div class="student">
-						<img class="student-pic" src="./images/buckit.png" alt="">
+						<img class="student-pic" src="./images/buckit.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>BuckIt</h3><h4>Rachel, Steph, Jessica</h4>
@@ -80,7 +80,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/syndiyoteamix/syndiyo-Web-Dev">
 					<div class="student">
-						<img class="student-pic"  src="./images/syndiyo.png" alt="">
+						<img class="student-pic"  src="./images/syndiyo.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>Syndiyo</h3><h4>Rob, Emma, Will, Mason</h4>
@@ -105,7 +105,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/cgjohn/Ticket_Tracker">
 					<div class="student">
-						<img class="student-pic" src="./images/tickets.png" alt="">
+						<img class="student-pic" src="./images/ticket.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>Ticket Tracker</h3><h4>Connor, Courtney, Jodie</h4>
@@ -116,7 +116,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/adimitui/Adevo">
 					<div class="student">
-						<img class="student-pic"  src="./images/adevo.png" alt="">
+						<img class="student-pic"  src="./images/adevo.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>Adevo</h3><h4>Nadim, Adelle</h4>
