--- a/templates/week4.html
+++ b/templates/week4.html
@@ -21,7 +21,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/MKHSKH003/CityMood">
 					<div class="student">
-						<img class="student-pic"  src="./images/citymood.png" alt="">
+						<img class="student-pic"  src="./images/citymood.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>CityMood</h3><h4>Wandile, Skhumbuzo</h4>
@@ -94,7 +94,7 @@
 			<div class="col-md-4">
 				<a href="https://github.com/amirxadem/holycow">
 					<div class="student">
-						<img class="student-pic"  src="./images/holycow.png" alt="">
+						<img class="student-pic"  src="./images/holycow.jpg" alt="">
 					</div>
 					<div class="caption app-caption">
 						<h3>Holy Cow</h3><h4>Amir, Raul</h4>
